Add Ajax and Firebase in Skills Section

--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
                                 </div>
                             </div>
 
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                    <p class="ptag"> Firebase </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                    <div class="progress progress-striped active ">
+                                        <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
+                                            role="progressbar" data-transitiongoal="70" style="width: 70%;"
+                                            aria-valuenow="50">
+                                            <div class="percentage">70%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
 
                             <br>
                             <div>
@@ -524,6 +539,21 @@
                                             role="progressbar" data-transitiongoal="60" style="width: 60%;"
                                             aria-valuenow="60">
                                             <div class="percentage">60%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                    <p class="ptag"> Ajax </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                    <div class="progress progress-striped active ">
+                                        <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
+                                            role="progressbar" data-transitiongoal="80" style="width: 80%;"
+                                            aria-valuenow="60">
+                                            <div class="percentage">80%</div>
                                         </div>
                                     </div>
                                 </div>
