--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           </div>
           <div class="mango">
             <a
-              href="https://drive.google.com/file/d/1UGPzkZ82RAJQqXdTFWeD0QKDReQuMT3d/view?usp=sharing"
-              class="btn2"
+              href="https://drive.google.com/file/d/1URSweJJw7o7aE_9LqD96yqCn3uTnq5jK/view?usp=sharing"
+              class="btn2" target="_blank"
               >Download Resume</a
             >
           </div>
