--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
       <section id="AboutMe">
         <h1 id="abouthead">Get To Know <span id="abouthead2">Me </span></h1>
         <div class="lined-bottom lined2"></div>
-        <div id="image"><img src="Image/AkashKhandelwal.jpg" alt="" /></div>
+        <div id="image"><img src="Image/AkashKhandelwal2.jpg" alt="" /></div>
         <div id="content" data-aos="zoom-in">
           <div class="sub-content">
             <p>
